# scorep_plugin_infiniband

./: .gitmodules  CMakeLists.txt  README.md  build  setup_env
include/: infiniband_counter.hpp  infiniband_sysfs.hpp
src/: infiniband_plugin.cpp  scorep_infiniband_dump_ports.cpp
